--- a/css/style.css
+++ b/css/style.css
@@ -29,6 +29,7 @@ hr{
 .navbar{
   padding: 20px;
   font-size: 17px;
+  transition: all 3s ease;
 }
 .navbar-collapse{
   z-index: 9999;
@@ -43,7 +44,6 @@ hr{
   width: 100%;
   z-index: 9999999;
   margin-left: 0;
-  padding: 30px;
   font-size: 20px;
 }
 .navbar-dark .navbar-nav .nav-link{
